--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>Responsive Web Hosting and WHMCS Template</title>
+    <title>NomasXanticheat</title>
    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Roboto%7COswald:300,400,700' rel='stylesheet'>
@@ -38,12 +38,12 @@
                     <div id="headerNav" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="active"><a href="index.html">HOME</a></li>
-                            <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">HOSTING<span class="caret"></span></a>
+                            <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">AntiCheat<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="shared-hosting.html">SHARED HOSTING</a></li>
-                                    <li><a href="reseller-hosting.html">RESELLER HOSTING</a></li>
-                                    <li><a href="vps-hosting.html">VPS HOSTING</a></li>
-                                    <li><a href="dedicated-hosting.html">DEDICATED HOSTING</a></li>
+                                    <li><a href="shared-hosting.html">Anticheat Samp</a></li>
+                                    <li><a href="reseller-hosting.html">Anticheat Mta Sa </a></li>
+                                    <li><a href="vps-hosting.html">Anticheat Fivem</a></li>
+                                    <li><a href="dedicated-hosting.html">Anticheat Script</a></li>
                                 </ul>
                             </li>
                             <li><a href="domain.html">DOMAIN</a></li>
@@ -131,7 +131,7 @@
                                         <div class="pricing--header">
                                             <h2>Plan 1</h2> </div>
                                         <div class="pricing--body">
-                                            <h3>Starting At<strong>$9.99</strong></h3>
+                                            <h3>Starting At<strong>$0.99</strong></h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur elit.</p>
                                         </div>
                                         <div class="pricing--footer"> <a href="#" class="btn--default hover">ORDER NOW</a> </div>
@@ -140,7 +140,7 @@
                                         <div class="pricing--header">
                                             <h2>Plan 2</h2> </div>
                                         <div class="pricing--body">
-                                            <h3>Starting At<strong>$9.99</strong></h3>
+                                            <h3>Starting At<strong>$2.99</strong></h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur elit.</p>
                                         </div>
                                         <div class="pricing--footer"> <a href="#" class="btn--default hover">ORDER NOW</a> </div>
@@ -149,7 +149,7 @@
                                         <div class="pricing--header">
                                             <h2>Plan 3</h2> </div>
                                         <div class="pricing--body">
-                                            <h3>Starting At<strong>$9.99</strong></h3>
+                                            <h3>Starting At<strong>$4.99</strong></h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur elit.</p>
                                         </div>
                                         <div class="pricing--footer"> <a href="#" class="btn--default hover">ORDER NOW</a> </div>
