--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#headerNav" aria-controls="headerNav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a href="login.html" class="header--custom-btn btn--default hover">LOGIN</a>
                         <a href="index.html" class="navbar-brand">
-                            <h1><span><i class="fa fm fa-server"></i>COLOR</span>HOST</h1> </a>
+                            <h1><span><i class="fa fm fa-server"></i>Nomas X</span>Anticheat</h1> </a>
                     </div><a href="login.html" class="header--custom-btn btn--default hover">LOGIN</a>
                     <div id="headerNav" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
